@@ -405,7 +405,8 @@ $wgMessageStructure = array(
 		'sqlhidden',
 		'cascadeprotected',
 		'namespaceprotected',
-		'customcssjsprotected',
+		'customcssprotected',
+		'customjsprotected',
 		'ns-specialprotected',
 		'titleprotected',
 	),
